--- a/index.css
+++ b/index.css
@@ -1,5 +1,7 @@
 /* mainCSSFile */
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+
 * {
   padding: 0;
   margin: 0;
@@ -39,4 +41,48 @@ button {
   background-color: white;
   outline: none;
   color: black;
+}
+
+select {
+  padding: 7px;
+  border: 1px solid black;
+  border-radius: 3px;
+}
+
+.options label,
+.options select {
+  font-family: 'Montserrat', sans-serif;
+}
+
+.input-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+input[type='color'] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: transparent;
+  width: 40px;
+  height: 28px;
+  border: none;
+  cursor: pointer;
+}
+
+input[type='color']::-webkit-color-swatch {
+  border-radius: 15px;
+  box-shadow: 0 0 0 2px white, 0 0 0 3px black;
+}
+
+#text-input {
+  margin-top: 10px;
+  border: 1px solid lightgray;
+  padding: 20px;
+  height: 50vh;
+}
+
+.active{ 
+  background-color: lightgray;
 }
