--- a/index.css
+++ b/index.css
@@ -12,10 +12,16 @@ body {
   background-color: #9d12b5;
 }
 
+.header {
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  padding-bottom: 5px;
+}
+
 .container {
   background-color: white;
-  width: 90vmin;
-  padding: 50px 30px;
+  width: 100vmin;
+  padding: 30px 30px;
   position: absolute;
   transform: translate(-50%, -50%);
   left: 50%;
@@ -28,7 +34,9 @@ body {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  gap: 15px;
+  gap: 25px;
+  justify-content: center;
+  padding-bottom: 5px;
 }
 
 button {
@@ -83,6 +91,21 @@ input[type='color']::-webkit-color-swatch {
   height: 50vh;
 }
 
-.active{ 
+.active {
   background-color: lightgray;
+}
+
+.text-area {
+  overflow: scroll;
+}
+
+.footer {
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  padding-top: 10px;
+}
+
+.footer a {
+  text-decoration: none;
+  color: inherit;
 }
